# pre-commit-rs

./: .pre-commit-config.yaml  Cargo.toml  setup.cfg
cfgv/: Cargo.toml
cfgv-derive/: Cargo.toml
cfgv-derive/src/: lib.rs
cfgv/src/: lib.rs
pre-commit-rs-derive/: Cargo.toml
pre-commit-rs-derive/src/: lib.rs
src/: clientlib.rs  env_ext.rs  git.rs  main.rs  repository.rs  staged_files_only.rs  store.rs
src/commands/: clean.rs  mod.rs  run.rs  sample_config.rs  validate_config.rs  validate_manifest.rs
