[package]
name = "pre-commit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
dirs = "6.0.0"
faccess = "0.2.4"
fslock = "0.2.1"
indoc = "2.0.5"
rm_rf = "0.6.2"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde_yaml = "0.9.34"
tempfile = "3.16.0"
cfgv = { path = "cfgv" }
cfgv-derive = { path = "cfgv-derive" }
pre-commit-rs-derive = { path = "pre-commit-rs-derive" }
pathdiff = "0.2.3"
gix = "0.70.0"
bstr = "1.11.3"
